# COBS

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prisma.config.ts  test_replacement_plan.ts  tsconfig.json
backend/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3dad6d21c1b8_initial_v2_schema.py  8a1b2c3d4e5f_allow_multiple_photos_per_entry.py  c1d2e3f4a5b6_add_cube_notes.py
backend/cobs/: __init__.py  app.py  config.py  database.py
backend/cobs/auth/: dependencies.py  jwt.py
backend/cobs/logic/: batch_simulator.py  cubecobra.py  optimizer.py  pdf.py  pod_sizes.py  simulate.py  standings.py  swiss.py  ws_manager.py
backend/cobs/models/: __init__.py  batch_analysis.py  cube.py  draft.py  match.py  photo.py  simulation.py  tournament.py  user.py  vote.py
backend/cobs/routes/: auth.py  batch_analysis.py  cubes.py  drafts.py  export.py  timer.py  (+9 more)
backend/tests/: conftest.py  test_auth.py  test_batch_analysis.py  test_batch_simulator.py  test_cube_management.py  test_cubes.py  test_drafts.py  test_export.py  test_full_simulation.py  test_matches.py  test_optimizer.py  test_pdf.py  test_pdf_logic.py  test_per_pod_pairings.py  test_photo_enforcement.py  test_photos.py  test_pod_sizes.py  test_simulate_draft.py  test_simulate_endpoints.py  test_simulate_logic.py  test_standings.py  test_swiss.py  test_test_data.py  test_timer.py  test_tournaments.py  test_votes.py
(+116 files in other folders)
